update after review

--- a/apps/festival/festival/src/app/dashboard/analytics/buyer/buyer-analytics.component.html
+++ b/apps/festival/festival/src/app/dashboard/analytics/buyer/buyer-analytics.component.html
@@ -105,7 +105,7 @@
           {{ requests }}
         </ng-template>
         <ng-template colRef="watchInfos.duration" label="Watch Time" let-watchTime sort>
-          {{ watchTime * 1000 | duration: '0s' }}
+          {{ watchTime * 1000 | duration }}
         </ng-template>
         <ng-template colRef="watchInfos.date" label="Watching Status" let-date sort>
           <bf-tag *ngIf="date | isWatchingNow">Watching Now</bf-tag>
