--- a/apps/festival/festival/src/app/dashboard/analytics/title/title-analytics.component.html
+++ b/apps/festival/festival/src/app/dashboard/analytics/title/title-analytics.component.html
@@ -135,7 +135,7 @@
           <ng-template #noCountry>-</ng-template>
         </ng-template>
         <ng-template colRef="watchInfos.duration" label="Watch Time" let-watchtime sort defaultSort>
-          <span>{{ watchtime * 1000 | duration: '0s' }}</span>
+          <span>{{ watchtime * 1000 | duration }}</span>
         </ng-template>
         <ng-template colRef="watchInfos.date" label="Watching Status" let-date sort defaultSort>
           <bf-tag *ngIf="date | isWatchingNow">Watching Now</bf-tag>
