--- a/apps/catalog/catalog/src/app/dashboard/avails/list/list.component.html
+++ b/apps/catalog/catalog/src/app/dashboard/avails/list/list.component.html
@@ -35,6 +35,9 @@
           <a mat-icon-button [routerLink]="[id,'calendar']" [queryParams]="queryParams">
             <mat-icon svgIcon="calendar_avails" matTooltip="Calendar View"></mat-icon>
           </a>
+          <a mat-icon-button [routerLink]="['select', id]">
+            <mat-icon svgIcon="edit" matTooltip="Manage Avails"></mat-icon>
+          </a>
         </div>
       </ng-template>
     </bf-table>
