--- a/apps/catalog/catalog/src/app/dashboard/title/view/view.component.html
+++ b/apps/catalog/catalog/src/app/dashboard/title/view/view.component.html
@@ -1,13 +1,16 @@
 <title-dashboard-shell *ngIf="movie$ | async as movie" [routes]="navLinks">
   <movie-cta fxLayout="column" fxLayout.lt-md="row" fxLayoutAlign="space-between end" fxFlex>
-    <a *ngIf="movie.app.catalog.status !== 'archived'" mat-button color="primary" [routerLink]="['/c/o/dashboard/avails', movie.id]">
-      <mat-icon svgIcon="calendar_today" color="primary"></mat-icon>
-      <span>Consult Avails</span>
+    <a mat-button color="primary" [routerLink]="['/c/o/dashboard/avails/select', movie.id]">
+      Manage Avails
     </a>
     <actions-dashboard-shell [movie]="movie" fxFlex #actions="actionsDashboardShell">
       <movie-action-menu>
         <a mat-menu-item [routerLink]="['/c/o/dashboard/tunnel/movie', movie.id]">
           <mat-icon svgIcon="edit"></mat-icon><span>Edit Title</span>
+        </a>
+        <a *ngIf="movie.app.catalog.status !== 'archived'" mat-menu-item [routerLink]="['/c/o/dashboard/avails', movie.id]">
+          <mat-icon svgIcon="calendar_today"></mat-icon>
+          <span>Consult Avails</span>
         </a>
         <a *ngIf="(org$ | async | canAccess: 'marketplace': 'catalog') && movie.app.catalog.status !== 'archived'" mat-menu-item [routerLink]="['/c/o/marketplace/title', movie.id, 'main']">
           <mat-icon svgIcon="visibility"></mat-icon>
