--- a/styles/style.scss
+++ b/styles/style.scss
@@ -106,6 +106,13 @@ main {
   }
 }
 
+.surface {
+  background-color: var(--background-card);
+  padding: 24px;
+  border-radius: 4px;
+  border: 1px solid var(--foreground-divider);
+}
+
 body {
   .intercom-lightweight-app, .intercom-namespace {
     z-index: 999; // It needs to be above everything except the cdk-overlay, which has a z-index: 1000
