Refactoring of pre-events pages, remove FlexLayout from html

--- a/apps/festival/festival/src/app/event/login/login.component.scss
+++ b/apps/festival/festival/src/app/event/login/login.component.scss
@@ -1,46 +1,36 @@
+@use 'surface';
 @import "@angular/flex-layout/mq";
 
 :host {
   width: 100vw;
   height: 100vh;
-
-  main {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    background-image: url("/assets/images/light/stars_wallpaper.svg");
-    background-position: center;
-    background-repeat: no-repeat;
-    
-    section {
-      margin: auto;
-      text-align: center;
-      width: fit-content;
-    }
-  }
+  display: flex;
+  flex-direction: column;
+  background-image: url("/assets/images/light/stars_wallpaper.svg");
+  background-position: center;
+  background-repeat: no-repeat;
 
   p {
     margin: 0;
   }
-  
-  a[app-logo] {
-    position: absolute;
-    top: 40px;
-    left: 40px;
+
+  .snackbar-bar-text {
+    margin-right: 24px;
   }
 
-  .surface {
+  article {
     text-align: center;
 
-    header {
+    menu {
+      padding: 0;
       text-align: left;
     }
 
     form {
-      padding: 40px;
+      display: flex;
+      flex-direction: column;
 
-      >a {
+      a {
         text-decoration: underline;
         font-weight: bold;
         margin-bottom: 24px;
@@ -49,43 +39,60 @@
       password-input {
         margin-bottom: 58px;
       }
+
+      footer {
+        display: flex;
+        flex-direction: column;
+      }
     }
   }
+}
 
-  .snack-bar-text {
-    margin-right: 24px;
+@include layout-bp(gt-xs) {
+  :host {
+    justify-content: center;
+    align-items: center;
+    position: relative;
+
+    header {
+      position: absolute;
+      top: 40px;
+      left: 40px;
+    }
+
+    article {
+      @include surface.surface;
+      padding: 24px;
+
+      menu {
+        margin: 0;
+      }
+
+      form {
+        padding: 40px;
+      }
+    }
   }
 }
 
 @include layout-bp(xs) {
   :host {
-    main {
-      width: 90%;
-      margin-inline: auto;
+    header {
+      align-self: center;
+      margin-top: auto;
+      padding-top: 24px;
 
-      section {
-        padding: 24px 0;
+      a[app-logo] {
+        height: 48px;
       }
     }
-    a[app-logo] {
-      position: relative;
-      left: 0;
-      top: 0;
-      height: 48px;
-      margin-bottom: 32px;
-    }
-    .surface {
-      padding: 0;
-      background: none;
-      border: none;
-      border-radius: 0;
 
-      form {
-        padding: 0;
+    article {
+      padding: 24px;
+      margin-bottom: auto;
 
-        password-input {
-          margin-bottom: 12px;
-        }
+      menu {
+        margin: 0 0 12px;
       }
     }
   }
