--- a/apps/festival/festival/src/app/event/identity/identity.component.html
+++ b/apps/festival/festival/src/app/event/identity/identity.component.html
@@ -1,38 +1,37 @@
-<main>
-  <section>
-    <a app-logo routerLink="/"></a>
-    <article class="surface">
-      <header>
-        <button fxFlexAlign="start" mat-icon-button color="black" (click)="goBack()">
-          <mat-icon svgIcon="arrow_back"></mat-icon>
-        </button>
-      </header>
-    
-      <form fxLayout="column" [formGroup]="form" (ngSubmit)="validateIdentity()" >
-        <h1>Welcome to Archipel Market!</h1>
-        <p class="mat-body-1">Please fill in your first and last name <br> to identify yourself.</p>
-    
-        <div fxLayout fxLayout.xs="column" fxLayoutAlign="space-between center" fxLayoutGap="16px">
-          <mat-form-field appearance="outline" fxFlex="0 1">
-            <mat-label>First Name</mat-label>
-            <input test-id="firstName" matInput type="text" placeholder="First Name" formControlName="firstName" required />
-            <mat-error *ngIf="form.get('firstName').hasError('required')">
-              First Name is <strong>required</strong>
-            </mat-error>
-          </mat-form-field>
-          <mat-form-field appearance="outline" fxFlex="0 1">
-            <mat-label>Last name</mat-label>
-            <input test-id="lastName" matInput type="text" placeholder="Last Name" formControlName="lastName" required />
-            <mat-error *ngIf="form.get('lastName').hasError('required')">
-              Last Name is <strong>required</strong>
-            </mat-error>
-          </mat-form-field>
-        </div>
-        
-        <footer>
-          <button mat-flat-button color="primary" type="submit">Join event</button>
-        </footer>
-      </form>
-    </article> 
-  </section>
-</main>
+<header>
+  <a app-logo routerLink="/"></a>
+</header>
+
+<article>
+  <menu>
+    <button fxFlexAlign="start" mat-icon-button color="black" (click)="goBack()">
+      <mat-icon svgIcon="arrow_back"></mat-icon>
+    </button>
+  </menu>
+
+  <form fxLayout="column" [formGroup]="form" (ngSubmit)="validateIdentity()">
+    <h1>Welcome to Archipel Market!</h1>
+    <p class="mat-body-1">Please fill in your first and last name <br> to identify yourself.</p>
+
+    <article>
+      <mat-form-field appearance="outline">
+        <mat-label>First Name</mat-label>
+        <input test-id="firstName" matInput type="text" placeholder="First Name" formControlName="firstName" required />
+        <mat-error *ngIf="form.get('firstName').hasError('required')">
+          First Name is <strong>required</strong>
+        </mat-error>
+      </mat-form-field>
+      <mat-form-field appearance="outline">
+        <mat-label>Last name</mat-label>
+        <input test-id="lastName" matInput type="text" placeholder="Last Name" formControlName="lastName" required />
+        <mat-error *ngIf="form.get('lastName').hasError('required')">
+          Last Name is <strong>required</strong>
+        </mat-error>
+      </mat-form-field>
+    </article>
+
+    <footer>
+      <button mat-flat-button color="primary" type="submit">Join event</button>
+    </footer>
+  </form>
+</article>
