--- a/apps/festival/festival/src/app/event/identity/identity.component.scss
+++ b/apps/festival/festival/src/app/event/identity/identity.component.scss
@@ -1,43 +1,76 @@
+@use 'surface';
 @import "@angular/flex-layout/mq";
 
 :host {
   width: 100vw;
   height: 100vh;
+  display: flex;
+  flex-direction: column;
+  background-image: url("/assets/images/light/stars_wallpaper.svg");
+  background-position: center;
+  background-repeat: no-repeat;
 
-  main {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    background-image: url("/assets/images/light/stars_wallpaper.svg");
-    background-position: center;
-    background-repeat: no-repeat;
-    
-    section {
-      margin: auto;
-      text-align: center;
-      width: fit-content;
-    }
+  .snackbar-bar-text {
+    margin-right: 24px;
   }
 
-  a[app-logo] {
-    position: absolute;
-    top: 40px;
-    left: 40px;
-  }
-
-  .surface {
+  article {
     text-align: center;
-  
-    header {
+
+    menu {
+      padding: 0;
       text-align: left;
     }
 
     form {
-      padding: 40px;
+      display: flex;
+      flex-direction: column;
 
-      div {
+      a {
+        text-decoration: underline;
+        font-weight: bold;
+        margin-bottom: 24px;
+      }
+
+      article {
+        display: flex;
         margin-block: 16px;
+      }
+    }
+  }
+}
+
+@include layout-bp(gt-xs) {
+  :host {
+    justify-content: center;
+    align-items: center;
+    position: relative;
+
+    header {
+      position: absolute;
+      top: 40px;
+      left: 40px;
+    }
+
+    & > article {
+      @include surface.surface;
+      padding: 24px;
+
+      menu {
+        margin: 0;
+      }
+
+      form {
+        padding: 40px;
+
+        article {
+          flex-direction: row;
+          gap: 16px;
+
+          mat-form-field {
+            flex: 1;
+          }
+        }
       }
     }
   }
@@ -45,32 +78,27 @@
 
 @include layout-bp(xs) {
   :host {
-    main {
-      width: 90%;
-      margin-inline: auto;
+    header {
+      align-self: center;
+      margin-top: auto;
+      padding-top: 24px;
 
-      section {
-        padding: 24px 0;
+      a[app-logo] {
+        height: 48px;
       }
     }
-    a[app-logo] {
-      position: relative;
-      left: 0;
-      top: 0;
-      height: 48px;
-      margin-bottom: 32px;
-    }
-    .surface {
-      padding: 0;
-      background: none;
-      border: none;
-      border-radius: 0;
+
+    & > article {
+      padding: 24px;
+      margin-bottom: auto;
+
+      menu {
+        margin: 0 0 12px 0;
+      }
 
       form {
-        padding: 0;
-
-        mat-form-field {
-          width: 100%;
+        article {
+          flex-direction: column;
         }
       }
     }
