--- a/apps/festival/festival/src/app/event/role/role.component.scss
+++ b/apps/festival/festival/src/app/event/role/role.component.scss
@@ -1,34 +1,17 @@
+@use 'surface';
 @import "@angular/flex-layout/mq";
 
 :host {
   width: 100vw;
-  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-image: url("/assets/images/light/stars_wallpaper.svg");
+  background-position: center;
+  background-repeat: no-repeat;
 
-  main {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    background-image: url("/assets/images/light/stars_wallpaper.svg");
-    background-position: center;
-    background-repeat: no-repeat;
-    
-    section {
-      margin: auto;
-      text-align: center;
-      width: fit-content;
-    }
-  }
-
-  
-  a[app-logo] {
-    position: absolute;
-    top: 40px;
-    left: 40px;
-  }
-
-  .surface {
-    padding: 56px;
+  article {
     text-align: center;
 
     h2 {
@@ -38,51 +21,83 @@
     p {
       margin-bottom: 24px;
     }
-    
-    button {
-      background-color: transparent;
-      border: none;
-      width: 215px;
-      height: 215px;
-      border-radius: 100%;
-      cursor: pointer;
 
-      img {
-        width: 80%;
+    menu {
+      display: flex;
+      margin: 0;
+      padding: 0;
+      
+      button {
+        background-color: transparent;
+        border: none;
+        width: 215px;
+        height: 215px;
+        border-radius: 100%;
+        cursor: pointer;
+  
+        &:hover {
+          background-color: var(--background-hover);
+        }
+        img {
+          width: 80%;
+        }
+        h5 {
+          color: var(--primary);
+        }
       }
-      &:hover {
-        background-color: var(--background-hover);
+    }
+  }
+}
+
+@include layout-bp(gt-xs) {
+  :host {
+    height: 100vh;
+    position: relative;
+
+    header {
+      position: absolute;
+      top: 40px;
+      left: 40px;
+    }
+
+    article {
+      @include surface.surface;
+      padding: 56px;
+
+      menu {
+        flex-direction: row;
+        gap: 80px;
+          
+        hr {
+          display: none;
+        }
       }
-      h5 {
-        color: var(--primary);
-      }
-    } 
+    }
   }
 }
 
 @include layout-bp(xs) {
   :host {
-    main {
-      width: 90%;
-      margin-inline: auto;
+    gap: 32px;
+    padding: 32px;
 
-      section {
-        padding: 24px 0;
+    header {
+      align-self: center;
+
+      a[app-logo] {
+        height: 48px;
       }
     }
-    a[app-logo] {
-      position: relative;
-      left: 0;
-      top: 0;
-      height: 48px;
-      margin-bottom: 32px;
+    article {
+      menu {
+        flex-direction: column;
+        align-items: center;
+        gap: 32px;
+
+        hr {
+          width: 100%;
+        }
+      }
     }
-    .surface {
-      padding: 0;
-      background: none;
-      border: none;
-      border-radius: 0;
-    }
-    mat-divider { width: 80%; }
   }
 }
