--- a/apps/festival/festival/src/app/event/login/login.component.html
+++ b/apps/festival/festival/src/app/event/login/login.component.html
@@ -4,12 +4,12 @@
 
 <article>
   <menu>
-    <button fxFlexAlign="start" mat-icon-button (click)="goBack()" color="black">
+    <button mat-icon-button (click)="goBack()" color="black">
       <mat-icon svgIcon="arrow_back"></mat-icon>
     </button>
   </menu>
 
-  <form fxLayout="column" [formGroup]="form" (ngSubmit)="validateLogin()">
+  <form [formGroup]="form" (ngSubmit)="validateLogin()">
     <h1>Welcome to Archipel Market!</h1>
     <p class="mat-body-1">I don't have an account</p>
     <a routerLink="/auth/identity">Sign up</a>
