--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@use './surface';
 
 :root {
   --layout-margin: 24px;
@@ -107,10 +108,8 @@ main {
 }
 
 .surface {
-  background-color: var(--background-card);
   padding: 24px;
-  border-radius: 4px;
-  border: 1px solid var(--foreground-divider);
+  @include surface.surface;
 }
 
 body {
