--- a/apps/festival/festival/src/app/event/identity/identity.component.html
+++ b/apps/festival/festival/src/app/event/identity/identity.component.html
@@ -13,7 +13,7 @@
     <h1>Welcome to Archipel Market!</h1>
     <p class="mat-body-1">Please fill in your first and last name <br> to identify yourself.</p>
 
-    <article>
+    <div>
       <mat-form-field appearance="outline">
         <mat-label>First Name</mat-label>
         <input test-id="firstName" matInput type="text" placeholder="First Name" formControlName="firstName" required />
@@ -28,7 +28,7 @@
           Last Name is <strong>required</strong>
         </mat-error>
       </mat-form-field>
-    </article>
+    </div>
 
     <footer>
       <button mat-flat-button color="primary" type="submit">Join event</button>
