simplified flex centering css

--- a/apps/catalog/catalog/src/app/dashboard/avails/select-title/select-title.component.html
+++ b/apps/catalog/catalog/src/app/dashboard/avails/select-title/select-title.component.html
@@ -25,8 +25,8 @@
 </ng-container>
 
 <ng-template #loading>
-  <section class="center">
-    <mat-spinner class="center"></mat-spinner>
+  <section>
+    <mat-spinner></mat-spinner>
   </section>
 </ng-template>
 
