--- a/apps/catalog/catalog/src/app/dashboard/avails/select-title/select-title.component.scss
+++ b/apps/catalog/catalog/src/app/dashboard/avails/select-title/select-title.component.scss
@@ -16,13 +16,7 @@ mat-form-field{
   align-self: stretch;
 }
 
-.center{
+section{
   display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 16px;
-}
-
-.column{
-  flex-direction: column;
+  place-content: center;
 }
