--- a/apps/festival/festival/src/app/dashboard/analytics/buyer/buyer-analytics.component.html
+++ b/apps/festival/festival/src/app/dashboard/analytics/buyer/buyer-analytics.component.html
@@ -9,7 +9,9 @@
 
       <div>
         <h4>{{ user | displayName }}</h4>
-        <h1>{{ user.org.name }}</h1>
+        <a [routerLink]="['/c/o/dashboard/organization/', user.orgId]">
+          <h1>{{ user.org.name }}</h1>
+        </a>
         <h5>{{ user.org.activity | toLabel:'orgActivity' }}</h5>
 
         <a mat-button [href]="'mailto:' + user.email">
