Renaming of fromName / toName in fromOrgName / toOrgName

--- a/apps/crm/crm/src/app/crm/pages/user/user.component.html
+++ b/apps/crm/crm/src/app/crm/pages/user/user.component.html
@@ -145,11 +145,11 @@
   <ng-template colRef="type" label="Type" let-type sort>
     {{type}}
   </ng-template>
-  <ng-template colRef="fromOrg.name" label="From Organization" let-fromName sort>
-    {{fromName}}
+  <ng-template colRef="fromOrg.name" label="From Organization" let-fromOrgName sort>
+    {{fromOrgName}}
   </ng-template>
-  <ng-template colRef="toOrg.name" label="To Organization" let-toName sort>
-    {{toName}}
+  <ng-template colRef="toOrg.name" label="To Organization" let-toOrgName sort>
+    {{toOrgName}}
   </ng-template>
   <ng-template colRef="status" label="Status" let-status sort>
     {{status}}
