--- a/apps/catalog/catalog/src/app/dashboard/avails/select-title/select-title.component.html
+++ b/apps/catalog/catalog/src/app/dashboard/avails/select-title/select-title.component.html
@@ -17,7 +17,7 @@
       </mat-select>
     </mat-form-field>
 
-    <a mat-flat-button color="primary" [disabled]="!titleId" [routerLink]="titleId">
+    <a mat-flat-button color="primary" [disabled]="!titleId" [routerLink]="[titleId, 'manage']">
       <span>Next</span>
       <mat-icon svgIcon="arrow_forward"></mat-icon>
     </a>
