Catalog - create save/load filters

--- a/apps/catalog/catalog/src/app/marketplace/title/list/list.component.scss
+++ b/apps/catalog/catalog/src/app/marketplace/title/list/list.component.scss
@@ -37,3 +37,11 @@ list-page-description, pdf-export button {
   margin-left: auto;
   flex-shrink: 0;
 }
+
+.test{
+  margin: auto;
+}
+.test button{
+  margin: 8px;
+  background: #3C64F7;
+}
