--- a/apps/catalog/catalog/src/app/dashboard/avails/shell/shell.component.html
+++ b/apps/catalog/catalog/src/app/dashboard/avails/shell/shell.component.html
@@ -8,7 +8,7 @@
         <h2>{{movie.title.international}}</h2>
       </a>
     </div>
-    <a mat-button [routerLink]="['/c/o/dashboard/avails/select', movie.id]" color="primary">Manage avails</a>
+    <a mat-button [routerLink]="['/c/o/dashboard/avails/select', movie.id, 'manage']" color="primary">Manage avails</a>
   </header>
 
   <section class="surface">
