--- a/libs/event/src/lib/pages/analytics/analytics.component.html
+++ b/libs/event/src/lib/pages/analytics/analytics.component.html
@@ -1,53 +1,55 @@
-<ng-container *ngIf="isEventStarted(event$ | async) as event">
-  <header>
-    <h2>Statistics</h2>
-    <mat-icon svgIcon="info" matTooltip="Statistics are updated in real time."></mat-icon>
-    <ng-container *ngIf="ongoingScreening(event)">
-      <a ongoing-event-button routerLink="/event/{{event.id}}/r/i"> 
-        Ongoing Screening
-      </a>
-    </ng-container>
-  </header>
-  <ng-container *ngIf="acceptedAnalytics as analytics; else loading">
-    <ng-container *ngIf="acceptedAnalytics.length else noAnalytics">
-      <section class="analytics">
-        <p>"0" means the user left the screening right away.</p>
-        <analytics-metric-card-list [cards]="aggregatedScreeningCards"></analytics-metric-card-list>
-        <article fxLayout="row" fxLayoutAlign="space-between start" flex>
-          <h3>Attendees</h3>
-          <button [disabled]="exporting" mat-button color="primary" (click)="exportTable()">
-            <ng-container *ngIf="exporting else export">
-              <span>Generating Excel...</span>
-            </ng-container>
-            <ng-template #export>
-              <mat-icon svgIcon="excel"></mat-icon>
-              <span>Export to Excel</span>
+<ng-container *ngIf="event$ | async as event">
+  <ng-container *ngIf="(event | eventTime) !== 'early'">
+    <header>
+      <h2>Statistics</h2>
+      <mat-icon svgIcon="info" matTooltip="Statistics are updated in real time."></mat-icon>
+      <ng-container *ngIf="(event | eventTime) === 'onTime'">
+        <a ongoing-event-button routerLink="/event/{{event.id}}/r/i"> 
+          Ongoing Screening
+        </a>
+      </ng-container>
+    </header>
+    <ng-container *ngIf="acceptedAnalytics as analytics; else loading">
+      <ng-container *ngIf="acceptedAnalytics.length else noAnalytics">
+        <section class="analytics">
+          <p>"0" means the user left the screening right away.</p>
+          <analytics-metric-card-list [cards]="aggregatedScreeningCards"></analytics-metric-card-list>
+          <article fxLayout="row" fxLayoutAlign="space-between start" flex>
+            <h3>Attendees</h3>
+            <button [disabled]="exporting" mat-button color="primary" (click)="exportTable()">
+              <ng-container *ngIf="exporting else export">
+                <span>Generating Excel...</span>
+              </ng-container>
+              <ng-template #export>
+                <mat-icon svgIcon="excel"></mat-icon>
+                <span>Export to Excel</span>
+              </ng-template>
+            </button>
+          </article>
+          <bf-table pagination="50" useFilter [source]="acceptedAnalytics">
+            <ng-template colRef="name" label="Name" let-name sort>{{ name | titlecase }}</ng-template>
+            <ng-template colRef="email" label="Email Address" let-email sort>{{ email }}</ng-template>
+            <ng-template colRef="orgName" label="Company Name" let-orgName sort>{{ orgName || dataMissing }}</ng-template>
+            <ng-template colRef="orgActivity" label="Company Activity" let-orgActivity>{{ orgActivity ? (orgActivity | toLabel: 'orgActivity') : dataMissing }}</ng-template>
+            <ng-template colRef="orgCountry" label="Country" let-orgCountry>{{ orgCountry ? (orgCountry | toLabel: 'territories') : dataMissing }}</ng-template>
+            <ng-template colRef="watchInfos.duration" label="Watch Time" let-duration sort>{{ duration * 1000 | duration }}</ng-template>
+            <ng-template colRef="watchInfos.date" label="Watching Status" let-date sort>
+              <bf-tag *ngIf="date | isWatchingNow">Watching Now</bf-tag>
             </ng-template>
-          </button>
-        </article>
-        <bf-table pagination="50" useFilter [source]="acceptedAnalytics">
-          <ng-template colRef="name" label="Name" let-name sort>{{ name | titlecase }}</ng-template>
-          <ng-template colRef="email" label="Email Address" let-email sort>{{ email }}</ng-template>
-          <ng-template colRef="orgName" label="Company Name" let-orgName sort>{{ orgName || dataMissing }}</ng-template>
-          <ng-template colRef="orgActivity" label="Company Activity" let-orgActivity>{{ orgActivity ? (orgActivity | toLabel: 'orgActivity') : dataMissing }}</ng-template>
-          <ng-template colRef="orgCountry" label="Country" let-orgCountry>{{ orgCountry ? (orgCountry | toLabel: 'territories') : dataMissing }}</ng-template>
-          <ng-template colRef="watchInfos.duration" label="Watch Time" let-duration sort>{{ duration * 1000 | duration }}</ng-template>
-          <ng-template colRef="watchInfos.date" label="Watching Status" let-date sort>
-            <bf-tag *ngIf="date | isWatchingNow">Watching Now</bf-tag>
-          </ng-template>
-        </bf-table>
-      </section>
+          </bf-table>
+        </section>
+      </ng-container>
     </ng-container>
+    <ng-template #noAnalytics>
+      <article class="no-analytics" fxLayout="column" fxLayoutAlign="center center">
+        <img asset="wait.svg" alt="waiting">
+        <p class="mat-body-2">There are no statistics available here yet.</p>
+      </article>
+    </ng-template>
+    <ng-template #loading>
+      <article fxLayout="row" fxLayoutAlign="center">
+        <mat-spinner></mat-spinner>
+      </article>
+    </ng-template>
   </ng-container>
-  <ng-template #noAnalytics>
-    <article class="no-analytics" fxLayout="column" fxLayoutAlign="center center">
-      <img asset="wait.svg" alt="waiting">
-      <p class="mat-body-2">There are no statistics available here yet.</p>
-    </article>
-  </ng-template>
-  <ng-template #loading>
-    <article fxLayout="row" fxLayoutAlign="center">
-      <mat-spinner></mat-spinner>
-    </article>
-  </ng-template>
 </ng-container>
