--- a/libs/event/src/lib/pages/analytics/analytics.component.html
+++ b/libs/event/src/lib/pages/analytics/analytics.component.html
@@ -14,7 +14,7 @@
         <section class="analytics">
           <p>"0" means the user left the screening right away.</p>
           <analytics-metric-card-list [cards]="aggregatedScreeningCards"></analytics-metric-card-list>
-          <article fxLayout="row" fxLayoutAlign="space-between start" flex>
+          <article>
             <h3>Attendees</h3>
             <button [disabled]="exporting" mat-button color="primary" (click)="exportTable()">
               <ng-container *ngIf="exporting else export">
@@ -41,13 +41,13 @@
       </ng-container>
     </ng-container>
     <ng-template #noAnalytics>
-      <article class="no-analytics" fxLayout="column" fxLayoutAlign="center center">
+      <article class="no-analytics">
         <img asset="wait.svg" alt="waiting">
         <p class="mat-body-2">There are no statistics available here yet.</p>
       </article>
     </ng-template>
     <ng-template #loading>
-      <article fxLayout="row" fxLayoutAlign="center">
+      <article class="loading-spinner">
         <mat-spinner></mat-spinner>
       </article>
     </ng-template>
