--- a/apps/festival/festival/src/app/dashboard/analytics/title/title-analytics.component.html
+++ b/apps/festival/festival/src/app/dashboard/analytics/title/title-analytics.component.html
@@ -107,7 +107,7 @@
     </ng-container>
   </header>
   <article class="surface">
-    <p>"0" means the user left the screening right away.</p>
+    <p>"0s" means the user watched less than a minute.</p>
     <analytics-metric-card-list [cards]="aggregatedScreeningCards$ | async"></analytics-metric-card-list>
     <ng-container *ngIf="invitations$ | async as invitations">
       <header>
