--- a/libs/event/src/lib/pages/analytics/analytics.component.html
+++ b/libs/event/src/lib/pages/analytics/analytics.component.html
@@ -9,13 +9,12 @@
         </a>
       </ng-container>
     </header>
-    <ng-container *ngIf="acceptedAnalytics as analytics; else loading">
-      <ng-container *ngIf="acceptedAnalytics.length else noAnalytics">
+    <ng-container *ngIf="analytics; else loading">
+      <ng-container *ngIf="analytics.length else noAnalytics">
         <section class="analytics">
           <p>"0s" means the user watched less than a minute.</p>
           <analytics-metric-card-list [cards]="aggregatedScreeningCards"></analytics-metric-card-list>
-          <article>
-            <h3>Attendees</h3>
+          <header>
             <button [disabled]="exporting" mat-button color="primary" (click)="exportTable()">
               <ng-container *ngIf="exporting else export">
                 <span>Generating Excel...</span>
@@ -25,8 +24,8 @@
                 <span>Export to Excel</span>
               </ng-template>
             </button>
-          </article>
-          <bf-table pagination="50" useFilter [source]="acceptedAnalytics">
+          </header>
+          <bf-table pagination="50" useFilter [source]="analytics">
             <ng-template colRef="name" label="Name" let-name sort>{{ name | titlecase }}</ng-template>
             <ng-template colRef="email" label="Email Address" let-email sort>{{ email }}</ng-template>
             <ng-template colRef="orgName" label="Company Name" let-orgName sort>{{ orgName || dataMissing }}</ng-template>
@@ -36,6 +35,9 @@
             <ng-template colRef="orgCountry" label="Country" let-orgCountry sort [filter]="filters.territories">
               {{ orgCountry ? (orgCountry | toLabel: 'territories') : dataMissing }}
             </ng-template>
+            <ng-template colRef="status" label="Invitation" let-status sort >
+              {{ status | toLabel: 'invitationStatus' }}
+             </ng-template>
             <ng-template colRef="watchInfos.duration" label="Watch Time" let-duration sort>{{ duration * 1000 | duration }}</ng-template>
             <ng-template colRef="watchInfos.date" label="Watching Status" let-date sort>
               <bf-tag *ngIf="date | isWatchingNow">Watching Now</bf-tag>
