--- a/apps/festival/festival/src/app/dashboard/analytics/buyer/buyer-analytics.component.html
+++ b/apps/festival/festival/src/app/dashboard/analytics/buyer/buyer-analytics.component.html
@@ -85,10 +85,10 @@
 
     <article>
       <header>
-        <div>
+        <article>
           <h4>Attended Screenings</h4>
           <p>"0s" means the user watched less than a minute.</p>
-        </div>
+        </article>
         <button mat-button color="primary" (click)="exportScreenerAnalytics()">
           <mat-icon svgIcon="cloud_download"></mat-icon>
           <span>Export Analytics to .CSV</span>
