--- a/apps/festival/festival/src/app/dashboard/analytics/title/title-analytics.component.html
+++ b/apps/festival/festival/src/app/dashboard/analytics/title/title-analytics.component.html
@@ -114,32 +114,32 @@
         <button mat-button color="primary" [disabled]="!invitations.length" (click)="exportScreenerAnalytics()">Export to .CSV</button>
       </header>
       <bf-table class="screenings" [source]="invitations" clickable useFilter pagination="5" (rowClick)="goToBuyer($event)">
-        <ng-template colRef label="Name" let-invitation="item" sort defaultSort [filter]="filters.name">
+        <ng-template colRef label="Name" let-invitation="item" sort [filter]="filters.name">
           <b>{{ invitation | guest:'user' | displayName }}</b>
         </ng-template>
-        <ng-template colRef label="Email" let-invitation="item" sort defaultSort [filter]="filters.email">
+        <ng-template colRef label="Email" let-invitation="item" sort [filter]="filters.email">
           <span>{{ (invitation | guest: 'user').email }}</span>
         </ng-template>
-        <ng-template colRef="guestOrg.name" label="Company Name" let-name sort defaultSort>
+        <ng-template colRef="guestOrg.name" label="Company Name" let-name sort>
           <span>{{ name ?? '-' }}</span>
         </ng-template>
-        <ng-template colRef="guestOrg.activity" label="Activity" let-activity sort defaultSort [filter]="filters.orgActivity">
+        <ng-template colRef="guestOrg.activity" label="Activity" let-activity sort [filter]="filters.orgActivity">
           <span *ngIf="activity else noActivity">{{ activity | toLabel: 'orgActivity' }}</span>
           <ng-template #noActivity>-</ng-template>
         </ng-template>
-        <ng-template colRef="guestOrg.addresses.main.country" label="Country" let-country sort defaultSort [filter]="filters.territories">
+        <ng-template colRef="guestOrg.addresses.main.country" label="Country" let-country sort [filter]="filters.territories">
           <span *ngIf="country else noCountry">
             {{ country | toLabel:'territories' }}
           </span>
           <ng-template #noCountry>-</ng-template>
         </ng-template>
-        <ng-template colRef="status" label="Invitation" let-status sort defaultSort >
+        <ng-template colRef="status" label="Invitation" let-status sort >
           {{ status | toLabel: 'invitationStatus' }}
         </ng-template>
-        <ng-template colRef="watchInfos.duration" label="Watch Time" let-watchtime sort defaultSort>
+        <ng-template colRef="watchInfos.duration" label="Watch Time" let-watchtime sort>
           <span>{{ watchtime * 1000 | duration }}</span>
         </ng-template>
-        <ng-template colRef="watchInfos.date" label="Watching Status" let-date sort defaultSort>
+        <ng-template colRef="watchInfos.date" label="Watching Status" let-date sort>
           <bf-tag *ngIf="date | isWatchingNow">Watching Now</bf-tag>
         </ng-template>
       </bf-table>
