--- a/apps/festival/festival/src/app/event/email/email.component.html
+++ b/apps/festival/festival/src/app/event/email/email.component.html
@@ -1,16 +1,19 @@
-<a app-logo routerLink="/"></a>
-<article class="surface">
-  <header>
+<header>
+  <a app-logo routerLink="/"></a>
+</header>
+
+<article>
+  <menu>
     <button mat-icon-button color="black" (click)="goBack()">
       <mat-icon svgIcon="arrow_back"></mat-icon>
     </button>
-  </header>
+  </menu>
   
   <form fxLayout="column" fxLayoutGap="16px" [formGroup]="form" (ngSubmit)="validateForm()" >
     <h1>Welcome to Archipel Market!</h1>
     <p class="mat-body-1">Please fill the following information:</p>
 
-    <div fxLayout fxLayoutAlign="space-between center" fxLayoutGap="16px">
+    <div class="names-container">
       <mat-form-field appearance="outline" fxFlex="0 1">
         <input test-id="firstName" matInput type="text" placeholder="First Name" formControlName="firstName" required />
         <mat-label>First Name</mat-label>
@@ -34,8 +37,21 @@
         Email Address is <strong>required</strong>
       </mat-error>
     </mat-form-field>
+   
     <footer fxLayout="column" fxLayoutAlign="center center">
-      <button mat-flat-button color="primary" type="submit">Join Event</button>
+      <div>
+        <mat-checkbox color="primary" formControlName="termsOfUse" test-id="terms" required>
+          <span class="mat-caption">I hereby accept Archipel Market&nbsp;
+            <a target="_blank" routerLink="/auth/terms">Terms and Conditions</a>.
+          </span>
+        </mat-checkbox>
+        <mat-checkbox color="primary" formControlName="privacyPolicy" test-id="privacy-policy" required>
+          <span class="mat-caption">I hereby accept the Processing of my Personal Data and declare to know&nbsp;
+            <a target="_blank" routerLink="/auth/privacy">the Conditions of such Processing and my rights under GDPR Regulation</a>.
+          </span>
+        </mat-checkbox>
+      </div>
+      <button mat-flat-button color="primary" type="submit" [disabled]="form.invalid">Join Event</button>
       <a mat-button color="primary" routerLink="../login">Log in with existing account</a>
     </footer>
   </form>
