--- a/apps/festival/festival/src/app/event/identity/identity.component.html
+++ b/apps/festival/festival/src/app/event/identity/identity.component.html
@@ -31,7 +31,18 @@
     </div>
 
     <footer>
-      <button mat-flat-button color="primary" type="submit">Join event</button>
+      <mat-checkbox color="primary" formControlName="termsOfUse" test-id="terms" required>
+        <span class="mat-caption">I hereby accept Archipel Market&nbsp;
+          <a target="_blank" routerLink="/auth/terms">Terms and Conditions</a>.
+        </span>
+      </mat-checkbox>
+  
+      <mat-checkbox color="primary" formControlName="privacyPolicy" test-id="privacy-policy" required>
+        <span class="mat-caption">I hereby accept the Processing of my Personal Data and declare to know&nbsp;
+          <a target="_blank" routerLink="/auth/privacy">the Conditions of such Processing and my rights under GDPR Regulation</a>.
+        </span>
+      </mat-checkbox>
+      <button [disabled]="form.invalid" mat-flat-button color="primary" type="submit">Join event</button>
     </footer>
   </form>
 </article>
