--- a/apps/crm/crm/src/app/dashboard/toolbar-top/toolbar-top.component.html
+++ b/apps/crm/crm/src/app/dashboard/toolbar-top/toolbar-top.component.html
@@ -21,7 +21,7 @@
   </button>
 
 
-  <a mat-button routerLink="crm/externalSales">
+  <a mat-button routerLink="crm/contracts">
     <mat-icon svgIcon="document"></mat-icon><span matLine>Contracts</span>
   </a>
 
