--- a/apps/crm/crm/src/app/crm/pages/contracts/list/list.component.html
+++ b/apps/crm/crm/src/app/crm/pages/contracts/list/list.component.html
@@ -1,11 +1,11 @@
 <ng-container *ngIf="mandates$ | async as mandates">
-  <mandates-list [mandates]="mandates" (rowClick)="goToMandate($event)">
+  <mandates-list [mandates]="mandates" (rowClick)="goToContract($event)">
     <h3>List of Mandates</h3>
   </mandates-list>
 </ng-container>
 
 <ng-container *ngIf="externalSales$ | async as externalSales; else loading">
-  <external-sales-list [sales]="externalSales" (rowClick)="goToSale($event)">
+  <external-sales-list [sales]="externalSales" (rowClick)="goToContract($event)">
     <section fxLayout="column" fxLayoutAlign="center center" fxFlexGap="16">
       <h1>There are no Deals yet.</h1>
       <img asset="empty_contract.svg" alt="Image, you have no sales yet">
